[package]
name = "hashf"
version = "0.1.0"
edition = "2021"
authors = ["Vitaliy Busko <vitaliy.opensource@gmail.com>"]

[lib]
name = "libhf"
path = "src/lib.rs"

[[bin]]
name = "hashf"
path = "src/main.rs"

[dependencies]
sha2 = "0.10.7"
clap = {version = "4.4.2", features = ["derive"] }
actix = "0.13.1"
actix-rt = "2.9.0"
log = "0.4.20"
env_logger = "0.10.0"
num_cpus = "1.16.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
